[package]
name = "nyoom-json"
version = "0.1.0"
edition = "2021"
readme = "README.md"
keywords = ["json", "streaming", "no-std"]
categories = ["no-std", "encoding"]
description = "A json serializer that goes nyoom."
repository = "https://github.com/emily-signet/nyoom-json"
license = "MIT"

[features]
default = ["alloc"]
alloc = []

[dependencies]
itoa = "1.0.6"
ryu = "1.0.13"
sealed = "0.5.0"
